--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
         <h1>Dashboard</h1>
 
+        <h2>Create User</h2>
+
         <form action="https://dashboard-api.glitch.me/create_user" method="POST">
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" placeholder="email@example.com"><br>
@@ -50,6 +52,19 @@
             Dashboard through Google Assistant.
         </p>
 
+        <h2 style="color: red;">Delete User</h2>
+
+        <form action="https://dashboard-api.glitch.me/delete_user" method="POST">
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" placeholder="email@example.com"><br>
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password"><br>
+            <input type="submit" value="Delete">
+        </form>
+
+        <p>
+            When you click the "Delete" button, your information will be deleted from the Dashboard database.
+        </p>
     </div>
 </body>
 
