--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" placeholder="email@example.com"><br>
             <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password"><br>
+            <input type="password" id="password" name="password"><br><br>
             <input type="submit" value="Delete">
         </form>
 
