Fixed actions in index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             Do you say something another way? Send an email to <a
                 href="mailto:picoplanetdev@gmail.com">picoplanetdev@gmail.com</a> and it will be added to the list.
         </p>
-        <form action="https://dashboard-api.glitch.me/create_user" method="POST">
+        <form action="https://dashboard-api.glitch.me/edit_classes" method="POST">
             <label for="email">Email:</label><br>
             <input type="email" id="class_email" name="email" placeholder="email@example.com"><br>
             <label for="password">Password:</label><br>
@@ -124,7 +124,7 @@
             Please type the term string exactly as it appears in PowerSchool, for example <em>Q1</em> or <em>S2</em>.
         </p>
 
-        <form action="https://dashboard-api.glitch.me/edit_classes" method="POST">
+        <form action="https://dashboard-api.glitch.me/set_term" method="POST">
             <label for="email">Email:</label><br>
             <input type="email" id="term_email" name="email" placeholder="email@example.com"><br>
             <label for="password">Password:</label><br>
