--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <input type="password" id="class_password" name="password"><br>
             <label for="classes">Class mapping (must be JSON compatible, test in <a href="https://jsonlint.com/"
                     target="_blank">JSONLint</a>)</label><br>
-            <textarea id="classes" name="class_classes" style="width: 100%; max-width: 100%; min-height: 300px;">{
+            <textarea id="class_classes" name="classes" style="width: 100%; max-width: 100%; min-height: 300px;">{
     "class_name": ["synonym1", "synonym2", "etc"],
     "class_name_2": ["synonym1", "synonym2", "etc"]
 }</textarea><br><br>
